--- a/theme.css
+++ b/theme.css
@@ -6,6 +6,7 @@
 @author       Perz1val
 @homepageURL  https://github.com/Perz1val-Hub/WebinarPG-Stylus
 @updateURL    https://github.com/Perz1val-Hub/WebinarPG-Stylus/raw/main/theme.css
+@license      CC-BY-SA-4.0
 ==/UserStyle== */
 @-moz-document regexp("chrome-extension://.*"),
 regexp("moz-extension://.*") {
