--- a/theme.css
+++ b/theme.css
@@ -1,14 +1,10 @@
 /* ==UserStyle==
-@name         Webinar dark
+@name         Webinar-PG
 @version      1.0
-@description  Easy to Edit Theme for PG online classes
-@namespace    https://github.com/overdodactyl/Stylus-Dark
 @author       Perz1val
 @homepageURL  https://github.com/Perz1val-Hub/WebinarPG-Stylus
-@updateURL    https://github.com/Perz1val-Hub/WebinarPG-Stylus/raw/main/theme.css
-@license      CC-BY-SA-4.0
 ==/UserStyle== */
-@-moz-document regexp("webinarium.webinar.pg.edu.pl*") {
+@-moz-document url-prefix("https://webinarium.webinar.pg.edu.pl/") {
     :root {
         --accent:#c56fd8;
         --accent-light:#e588ab;
