--- a/theme.user.css
+++ b/theme.user.css
@@ -1,5 +1,7 @@
 /* ==UserStyle==
 @name         Webinar-PG
+@namespace    https://github.com/Perz1val-Hub/WebinarPG-Stylus
+@version      1.0.0
 @author       Perz1val
 @homepageURL  https://github.com/Perz1val-Hub/WebinarPG-Stylus
 ==/UserStyle== */
