--- a/purple.user.css
+++ b/purple.user.css
@@ -1,5 +1,5 @@
 /* ==UserStyle==
-@name         Webinar-PG
+@name         Webinar-PG-Purple
 @namespace    https://github.com/Perz1val-Hub/WebinarPG-Stylus
 @version      1.0.0
 @author       Perz1val
