--- a/desaturated.user.css
+++ b/desaturated.user.css
@@ -1,5 +1,5 @@
 /* ==UserStyle==
-@name         Webinar-PG-Matrix
+@name         Webinar-PG-Desaturated
 @namespace    https://github.com/Perz1val-Hub/WebinarPG-Stylus
 @version      1.0.0
 @author       Perz1val
